# ChangeLog for app-portage/gentoolkit
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.92 2006/10/17 14:20:15 uberlord Exp $

  17 Oct 2006; Roy Marples <uberlord@gentoo.org>
  gentoolkit-0.2.3_pre2.ebuild:
  Added ~sparc-fbsd keyword.

*gentoolkit-0.2.3_pre2 (10 Oct 2006)

  10 Oct 2006; Paul Varner <fuzzyray@gentoo.org> -gentoolkit-0.2.1.ebuild,
  +gentoolkit-0.2.3_pre2.ebuild:
  Version bump to add eread, remove gentoolkit-0.2.1

*gentoolkit-0.2.3_pre1 (04 Sep 2006)

  04 Sep 2006; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-0.2.3_pre1.ebuild:
  New release for various bug fixes and enhancements.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> gentoolkit-0.2.2.ebuild:
  Marked stable on mips.

  03 Jul 2006; Fabian Groffen <grobian@gentoo.org> gentoolkit-0.2.2.ebuild:
  Marked ppc-macos stable (bug #135068)

  19 Jun 2006; Thomas Cort <tcort@gentoo.org> gentoolkit-0.2.2.ebuild:
  Stable on alpha wrt Bug #135068.

  10 Jun 2006; Jason Wever <weeve@gentoo.org> gentoolkit-0.2.2.ebuild:
  Stable on SPARC wrt bug #136198.

  10 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  gentoolkit-0.2.2.ebuild:
  Stable on x86 wrt bug #135068.

  09 Jun 2006; Guy Martin <gmsoft@gentoo.org> gentoolkit-0.2.2.ebuild:
  Stable on hppa.

  09 Jun 2006; Emanuele Giaquinta <exg@gentoo.org> gentoolkit-0.2.2.ebuild:
  Stable on ppc; bug #135068

  09 Jun 2006; Markus Rothe <corsair@gentoo.org> gentoolkit-0.2.2.ebuild:
  Stable on ppc64; bug #135068

  09 Jun 2006; Luis Medinas <metalgod@gentoo.org> gentoolkit-0.2.2.ebuild:
  Stable on amd64. Bug #136198.

*gentoolkit-0.2.2 (31 May 2006)

  31 May 2006; Paul Varner <fuzzyray@gentoo.org>
  -gentoolkit-0.2.2_pre4.ebuild, -gentoolkit-0.2.2_rc1.ebuild,
  +gentoolkit-0.2.2.ebuild:
  Release gentoolkit-0.2.2 for going stable in conjunction with portage-2.1.
  Remove outdated ebuilds.

*gentoolkit-0.2.2_rc1 (23 May 2006)
