@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/gentoolkit
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.92 2006/10/17 14:20:15 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.93 2006/12/29 17:40:26 fuzzyray Exp $
+
+*gentoolkit-0.2.3_pre3 (29 Dec 2006)
+
+  29 Dec 2006; Paul Varner <fuzzyray@gentoo.org>
+  +gentoolkit-0.2.3_pre3.ebuild:
+  Version bump to release fixed genpkgindex
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org>
   gentoolkit-0.2.3_pre2.ebuild:
